--- a/Changes
+++ b/Changes
@@ -4,8 +4,11 @@ Class-Method-ModifiersX-Augment
 Created:      2012-11-02
 Home page:    <https://metacpan.org/release/Class-Method-ModifiersX-Augment>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=Class-Method-ModifiersX-Augment>
-Maintainer:   Toby Inkster <mailto:tobyink@cpan.org>
+Maintainer:   Toby Inkster (TOBYINK) <tobyink@cpan.org>
 
-0.001  2012-11-02  # Initial release
+0.002	2014-09-10
 
+ [ Packaging ]
+ - Switch to Dist::Inkt.
 
+0.001	2012-11-02	Initial release
